--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h1 class="text-center">Lorem ipsum dolor sit amet</h1>
+              <h1 class="text-center">Camino 5k</h1>
               <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, dicta, cupiditate consequatur necessitatibus quos libero eius ipsum qui sit molestiae.</p>
               <p>&nbsp;</p>
               <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> </p>
@@ -50,26 +50,26 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 mb-4 mt-2 text-center">
-            <h2>ABOUT US</h2>
+            <h2>Activites&nbsp;</h2>
           </div>
         </div>
       </div>
       <div class="container ">
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="img-thumbnail img-fluid" alt="140x140" style="width: 200px; height: 256px;" src="images/Archery_Update1.png" data-holder-rendered="true">
+            <img class="img-fluid rounded" alt="140x140" style="width: 200px; height: 256px;" src="images/Archery_Update1.png" data-holder-rendered="true">
             <h3>Archery&nbsp;</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <p>Info</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="img-thumbnail" alt="140x140" style="width: ; height: 256px;" src="images/Camping.png" data-holder-rendered="true">
+            <img class="rounded" alt="140x140" style="width: ; height: 256px;" src="images/Camping.png" data-holder-rendered="true">
             <h3>Camping</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <p>Info</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="img-thumbnail" alt="140x140" style="width: ; height: 256px;" src="images/AxeThrowing.png" data-holder-rendered="true">
+            <img class="rounded" alt="140x140" style="width: ; height: 256px;" src="images/AxeThrowing.png" data-holder-rendered="true">
             <h3>Axe Throwing</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <p>Info</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
