--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
+            <img class="rounded" alt="140x140" style="width:; height: 256px;" src="images/CornHole.png" data-holder-rendered="true">
             <h3>Corn Hole</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
           </div>
