new activity updates

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>Info</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
+            <img class="rounded" alt="140x140" style="width:; height: 256px;" src="images/Tennis.png" data-holder-rendered="true">
             <h3>Tennis</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
           </div>
@@ -82,7 +82,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
+            <img class="rounded" alt="140x140" style="width:; height: 256px;" src="images/Volleyball.png" data-holder-rendered="true">
             <h3>Volleyball</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
           </div>
