--- a/index.html
+++ b/index.html
@@ -74,18 +74,24 @@
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <img class="rounded" alt="140x140" style="width:; height: 256px;" src="images/Tennis.png" data-holder-rendered="true">
             <h3>Tennis</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <p>Info</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <img class="rounded" alt="140x140" style="width:; height: 256px;" src="images/CornHole.png" data-holder-rendered="true">
             <h3>Corn Hole</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <p>Info</p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <img class="rounded" alt="140x140" style="width:; height: 256px;" src="images/Volleyball.png" data-holder-rendered="true">
             <h3>Volleyball</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <p>Info</p>
           </div>
+			     <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+            <img class="rounded" alt="140x140" style="width:; height: 256px;" src="images/Pool.png" data-holder-rendered="true">
+            <h3>Pool&nbsp;</h3>
+            <p>Info</p>
+          </div>
+     
         </div>
         <div class="row">
           <div class="col-sm-12 mt-4 mb-2 text-center">
