--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p></p>
           </div>
 			     <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-            <img class="rounded" alt="140x140" style="width:; height: 256px;" src="images/Pool.png" data-holder-rendered="true">
+            <img class="rounded img-fluid" alt="140x140" style="width:; height: 256px;" src="images/Pool.png" data-holder-rendered="true">
             <h3>Pool&nbsp;</h3>
             <p></p>
           </div>
