--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 mb-2 text-center">
-            <h2>OUR SERVICES</h2>
+            <h2>Activity Information&nbsp;</h2>
           </div>
         </div>
    
