--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   </div>
                   <div class="form-group">
                     <label for="message">Message</label>
-                    <textarea rows="10" cols="100" class="form-control" id="message" name="message" placeholder="Message" aria-describedby="messageHelp"></textarea>
+                    <textarea rows="10" cols="100" class="form-control" id="message" name="message" placeholder="Please enter all names that will be joining" aria-describedby="messageHelp"></textarea>
                     <span id="messageHelp" class="form-text text-muted" style="display: none;">Please enter a message.</span>
                   </div>
                   <button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg"> Send</button>
