--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 				
               <p class="text-center"><em>Hello Camino Buddies, this page is intended to layout where we currenlty stand for the 5k&nbsp; &nbsp; &nbsp; &nbsp; </em></p>
-				<h4  class="text-center underline">Camino Team: <span class="unBold"> Maria / Hoberto / Tim / Mimi / Juan / Ruth / Chris / Jessica <br> </span></h4><br>
+				<h4  class="text-center">Camino Team: <span class="unBold"> Maria / Hoberto / Tim / Mimi / Juan / Ruth / Chris / Jessica <br> </span></h4><br>
 <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6"><ul class="home-text" style="list-style-type:disc;">
 						  <h3 >Complete / In-progress&nbsp;&nbsp;</h3>
