--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p>Copyright © Aceves. All rights reserved.</p>
+            <p>Copyright © Aceves. All rights reserved. V1</p>
           </div>
         </div>
       </div>
